# PyVMCON

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  pypi.yml  quality.yml  tests.yml
docs/source/: conf.py  example.ipynb  index.rst  modules.rst  pyvmcon.rst  vmcon.rst
examples/: converges.ipynb
src/pyvmcon/: __init__.py  exceptions.py  problem.py  vmcon.py
src/vmcon/: __init__.py  building_blocks.py  exceptions.py  function.py  problem.py  types.py  utilities.py  vmcon.py
tests/: conftest.py  test_type_coercion.py  test_vmcon.py  test_vmcon_alkylation.py  test_vmcon_bounds.py  test_vmcon_paper.py
