[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "PyVMCON"
version = "2.2.2"
description = "Python implementation of the VMCON non-linear constrained optimiser."
keywords = ["vmcon", "optimisation", "non-linear constrained optimisation"]
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Timothy Nunn", email = "timothy.nunn@ukaea.uk" }]
requires-python = ">=3.8"
dependencies = ["numpy>=1.19", "cvxpy>=1.5.2"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]

[project.urls]
Documentation = "https://ukaea.github.io/PyVMCON/"
Source = "https://github.com/ukaea/PyVMCON"

[project.optional-dependencies]
docs = [
    "Sphinx>=6.1",
    "sphinxcontrib-mermaid>=0.9",
    "nbsphinx>=0.9",
    "ipython",
    "ipykernel",
    "nbformat>=4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
