[metadata]
name = vmcon
description = python implementation of the VMCON non-linear constrained optimiser.
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: vmcon.__version__
author = Timothy Nunn

[options]
packages =
    vmcon
install_requires = 
    numpy
    scipy
    cvxpy
python_requires = >=3.8
package_dir =
    =src